Fix insert image URL textbox overflow

--- a/src/fitnesse/resources/wysiwyg/wysiwyg.css
+++ b/src/fitnesse/resources/wysiwyg/wysiwyg.css
@@ -232,3 +232,7 @@ textarea#pageContent {
 .modal-dialog .directory {
     list-style-image: url('../images/folder.gif');
 }
+
+.modal-dialog .url {
+    width: 100%
+}
